[gd_scene load_steps=5 format=3 uid="uid://car5sxy6gpfc"]

[ext_resource type="Texture2D" uid="uid://cui2wmmtxqnv5" path="res://art/apple.png" id="1_ga6pt"]
[ext_resource type="Script" uid="uid://deal2cwf0qygb" path="res://scenes/level_objects/hazards/enemy.gd" id="1_kuaqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuaqs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xud0"]

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 0
script = ExtResource("1_kuaqs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kuaqs")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 1, 59.669, 1)
texture = ExtResource("1_ga6pt")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("RectangleShape2D_2xud0")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
